dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>DunsNumber__c</fullName>
    <inlineHelpText>The Data Universal Numbering System number is a unique, nine-digit number assigned to every business location in the Dun &amp; Bradstreet database that has a unique, separate, and distinct operation.</inlineHelpText>
    <label>Duns Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>