dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <inlineHelpText>Fax number for the account.</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>