dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>An industry associated with this account. Maximum size is 40 characters.</inlineHelpText>
    <label>Industry</label>
    <length>40</length>
    <type>Text</type>
</CustomField>