dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <inlineHelpText>Number of employees working at the company represented by this account. Maximum size is eight digits.</inlineHelpText>
    <label>Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>