dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Phone number for this account. Maximum size is 40 characters.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>