dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <inlineHelpText>Honorific added to the name for use in letters, etc.</inlineHelpText>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Miss.</fullName>
            </value>
            <value>
                <fullName>Professor.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>