dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>