dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <inlineHelpText>Name of the account’s location, for example Headquarters or London. Label is Account Site. Maximum of 80 characters.</inlineHelpText>
    <label>Account Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>