dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/TickerSymbol__c.field-meta.xml
<CustomField>
    <fullName>TickerSymbol__c</fullName>
    <inlineHelpText>The stock market symbol for this account.</inlineHelpText>
    <label>Ticker Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>