dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>The website of this account. Maximum of 255 characters.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>