dx/force-app/main/default/objects/ltng_M2M_Account__c/fields/YearStarted__c.field-meta.xml
<CustomField>
    <fullName>YearStarted__c</fullName>
    <inlineHelpText>The date when an organization was legally established. Maximum length is 4 characters.</inlineHelpText>
    <label>Year Started</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>