dx/force-app/main/default/objects/ltng_M2M_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Industry__c</columns>
    <columns>Type__c</columns>
    <columns>AnnualRevenue__c</columns>
    <columns>NumberOfEmployees__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>